--- a/ErenYeager.html
+++ b/ErenYeager.html
@@ -1,1 +1,123 @@
-
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eren Yeager</title>
+    <style>
+        body {font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-image: url(https://wallpaperaccess.com/full/2725441.jpg);
+         background-repeat: no-repeat; background-size:400%; color:cornsilk; }
+             
+    </style>
+</head>
+<body>
+ <table style="width:75%;">
+     <tr>
+        <td style="text-align: right; width: 25%;"><h1>Eren Yeager</h1></td>
+        <td style="text-align: right;"><img src="https://i.pinimg.com/originals/b6/6d/22/b66d22a8b57900e75cbab27192cd58a3.jpg" alt="Eren Yeager" width="60%"></td>
+    </tr>
+</table>
+<table style="width: 25%; text-align: justify;">
+    <tr>
+        <td>
+        <h2>Karakter leírás</h2>
+        <p>Az Attack on Titan főszereplője. A Maria fal déli szélén található Shiganshinában élt és nőt fel. 
+        Mikor a két inteligens névszerint, a Kolosszális és a Páncélos titán áttörte a falat és ezzel pusztítást
+        okozott, Eren szemtanuja lehetett anyja titán általi halálának.Ez Erenben heves érzelmeket okozott és ekkor
+        esküdött meg, hogy az összes titánt egytől egyig eltünteti a föld színéről.
+        </p>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>Alap információk</h2>
+        </td>
+    </tr>
+</table>
+<table  border="1" style="padding: 0ch; border-spacing: 0ch;">
+    <tr>
+        <td>Név</td>
+        <td>Eren Yeager</td>
+    </tr>
+    <tr>
+        <td>Becenév</td>
+        <td>Öngyilkos bolond</td>
+    </tr>
+    <tr>
+        <td>Faj</td>
+        <td>Ember/Intelligens titán</td>
+    </tr>
+    <tr>
+        <td>Nem</td>
+        <td>Férfi</td>
+    </tr>
+    <tr>
+        <td>Kor</td>
+        <td><p>15(850)</p> <p>19(854)</p></td>
+    </tr>
+    <tr>
+        <td>Magasság</td>
+        <td><p>170cm(850)</p> <p>183cm(854)</p> <p>15m(Titán forma)</p></td>
+    </tr>
+    <tr>
+        <td>Születésnap</td>
+        <td>Március 30.</td>
+    <tr>
+        <td>Születési hely</td>
+        <td>Shiganshina kerület</td>
+    </tr>
+    <tr>
+        <td>Hovatartozás</td>
+        <td><p>104.kadétosztag</p> <p>Felderítő egység</p> <p>Levi osztaga</p> <p>Yeageristák</p></td>
+    </tr>
+    <tr>
+        <td>Japán szinkron</td>
+        <td> <a href="https://en.wikipedia.org/wiki/Yuki_Kaji" style="color: cornsilk;"> Yuki Kaji </a> </td>
+    </tr>
+    <tr>
+        <td>Titánjai</td>
+        <td> <p> Attack Titan </p> <p> Founding(Alapító)Titan </p> <p>WarHammer(Csatapöröly) Titan </p> </td>
+    </tr>
+    <tr>
+        <td>Rokonok</td>
+        <td>
+            <p>Grisha Yeager(apja)</p>
+            <p>Carla Yeager(anyja)</p>
+            <p>Zeke Yeager(féltestvére)</p>
+            <p>Yeager úr(nagyapja)</p>
+            <p>Névtelen nagyanyja</p>
+            <p>Fay Yeager(nagynénje)</p>
+        </td>
+    </tr>
+    <tr>
+        <td>Állapot</td>
+        <td>Élő</td>
+    </tr>
+</table>
+<table style="width: 75%;">
+    <tr>
+        <td> <h2>Kinézet</h2></td>
+    </tr>
+    <tr>
+        <td style="text-align: right; width: 25%;"> <h3> Első megjelenés </h3> </td>
+        <td style="text-align: right;"><img src="https://i.redd.it/q37ox7wwvsc61.jpg" alt="Eren Yeager első megjelenés" width="50%"></td>
+    </tr>
+    <tr>
+        <td style="text-align: right; width: 25%;"> <h3> Jelenleg </h3> </td>
+        <td style="text-align: right;"><img src="https://cdn.vox-cdn.com/thumbor/4rHnZJfKeX3CULTvnI8D3ovhP3w=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22474122/Screenshotter_HuluWatch_2050.0.jpeg" alt="Eren Yeager jelenleg" width="50%"></td>
+    </tr>
+    <tr>
+        <td style="text-align: right; width: 25%;"> <h3> Titán forma </h3> </td>
+        <td style="text-align: right;"><img src="https://sportshub.cbsistatic.com/i/2021/03/18/3e53be0e-f5d1-443b-9bf5-dc4d6abe860a/attack-on-titan-season-four-1249758.jpg" alt="Eren Yeager Titán forma" width="50%"></td>
+    </tr>
+    <tr>
+       <td>
+        <nav>
+          <a href="https://bearturtle.github.io/AttackOnTitan/" style="color: cornsilk; font-size: x-large;">Vissza a főoldalra</a>
+        </nav>
+      </td>
+    </tr>
+</table>
+</body>
+</html>
